--- a/src/style/BuildingInfo.css
+++ b/src/style/BuildingInfo.css
@@ -1,142 +1,243 @@
-.building-info{
-    margin: 100px auto 0;
-    background-color: rgba(241, 243, 243, 1);
-
+.building-info {
+  margin: 100px auto 0;
+  background-color: rgba(241, 243, 243, 1);
 }
 
-.building-info .building-info-title{
-padding: 50px;
+.building-info .building-info-title {
+  padding: 50px;
 }
 /* ------------------------------------------------ */
 
-.building-info .building-details{
-    /* background-color: antiquewhite; */
-    width: 100%;
-    height:852px;
-    padding: 0 120px;
-    position: relative;
+.building-info .building-details {
+  /* background-color: antiquewhite; */
+  width: 100%;
+  height: 852px;
+  padding: 0 120px;
+  position: relative;
 }
-
-.building-info .building-details .building-btns-box1{
-/* background-color: green; */
-width: 100%;
-max-width: 1192px;
-height: 68px;
-margin: auto;
-display: flex;
-gap: 24px;
-}
-
-
-.building-info .building-details .building-btns-box1 button{
-    width: 280px;
-    height: 68px;
-    color: black;
-    background-color:rgb(255, 255, 255) ;
-    border-radius: 50px;
-    border: none;
-    font-family: 'Lato';
-    font-size: 32px;
-    line-height: 40px;
-    font-weight: 700;
-    text-transform: uppercase;
-    display: flex;
-justify-content: center;
-align-items: center;
-gap:8px;
-}
-
-.building-info .building-details .building-btns-box1 button.active{
-    background-color:rgba(6, 11, 14, 1) ;
-    color: white;
-}
-
-.building-info .building-details .building-btns-box2{
-    background-color: rgb(255, 255, 255);
-    border: none;
-    border-radius: 100px;
-    width: 100%;
-    max-width: 164px;
-    height:584px;
+@media (max-width:991px) {
+  .building-info .building-details {
+    height: 100%;
+    padding: 0;
     display: flex;
     flex-direction: column;
+    gap: 20px;
+  }
+}
+.building-info .building-details .building-btns-box1 {
+  /* background-color: green; */
+  width: 100%;
+  max-width: 1192px;
+  height: 68px;
+  margin: auto;
+  display: flex;
+  gap: 24px;
+}
+
+@media (max-width: 767px) {
+  .building-info .building-details .building-btns-box1 {
+    height: 100%;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 24px;
+  }
 }
 
-.building-info .building-details .building-btns-box2 button{
-    width: 116px;
-    height: 116px;
-    background-color:rgba(177, 179, 180, 1);
-    border-radius: 50%;
-    color: white;
-    border: none;
-    font-family: 'Lato';
+
+
+
+.building-info .building-details .building-btns-box1 button {
+  width: 280px;
+  height: 68px;
+  color: black;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50px;
+  border: none;
+  font-family: "Lato";
+  font-size: 32px;
+  line-height: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+@media (max-width: 767px) {
+  .building-info .building-details .building-btns-box1 button {
+    width: 150px;
+    height: 68px;
     font-size: 20px;
-    line-height: 40px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: capitalize;
+    line-height: 24px;
+  }
 }
-.building-info .building-details .building-btns-box2 button.active{
-    background-color:rgba(6, 11, 14, 1) ;
-    color: white;
+
+@media (min-width: 768px) and (max-width:991px){
+  .building-info .building-details .building-btns-box1 button {
+    width: 180px;
+    height: 68px;
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
-.building-info .building-details .specifications{
-    /* background-color: chocolate; */
+
+
+.building-info .building-details .building-btns-box1 button.active {
+  background-color: rgba(6, 11, 14, 1);
+  color: white;
+}
+
+.building-info .building-details .building-btns-box2 {
+  background-color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 100px;
+
+  width: 164px;
+  height: 584px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+
+@media (max-width: 767px) {
+  .building-info .building-details .building-btns-box2 {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    /* flex-wrap:wrap ; */
     width: 100%;
-    max-width: 880px;
-    height: 416px;
-    position: absolute;
-right:50px;
-top:150px;
-display: flex;
-flex-direction: column;
-gap: 16px;
-justify-content: space-between;
+    gap: 8px;
+  }
 }
 
-.building-info .building-details .specifications span.specifications-name{
-font-family: 'Lato';
-font-weight: 700;
-font-size: 20px;
-line-height: 40px;
-letter-spacing: 1px;
-text-transform: capitalize;
-color: rgba(6, 11, 14, 1);
-display: flex;
-justify-content: center;
-align-items: center;
-gap:8px;
+.building-info .building-details .building-btns-box2 button {
+  width: 116px;
+  height: 116px;
+  background-color: rgba(177, 179, 180, 1);
+  border-radius: 50%;
+  color: white;
+  border: none;
+  font-family: "Lato";
+  font-size: 20px;
+  line-height: 40px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: capitalize;
 }
 
-.building-info .building-details .specifications span.specifications-val{
-font-family: 'Lato';
-font-weight: 400;
-font-size: 18px;
-line-height: 32px;
-letter-spacing: 1px;
-text-transform:lowercase;
-color: rgba(6, 11, 14, 1);
+@media (max-width: 767px) {
+  .building-info .building-details .building-btns-box2 button {
+    width: 90px;
+    height: 90px;
+    font-size: 14px;
+    line-height: 20px;
+  }
 }
 
-.building-info .building-details .specifications div{
-    padding:20px;
-display: flex;
-gap: 500px;
-justify-content: flex-start;
-align-items: center;
-position: relative;
+
+
+
+.building-info .building-details .building-btns-box2 button.active {
+  background-color: rgba(6, 11, 14, 1);
+  color: white;
+}
+.building-info .building-details .specifications {
+  /* background-color: chocolate; */
+  width: 100%;
+  max-width: 880px;
+  height: 416px;
+  position: absolute;
+  right: 50px;
+  top: 150px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: space-between;
 }
 
-.building-info .building-details .specifications div:not(:last-child)::after{
-/* border-bottom: 1px solid rgba(177, 179, 180, 1); */
-content: "";
-position: absolute;
-width: 100%;
-height: 1px;
-background-color:rgba(177, 179, 180, 1);
-bottom: -10px;
-left: 0;
+@media (max-width: 767px) {
+  .building-info .building-details .specifications {
+    height: 100%;
+    position: relative;
+    right: 0;
+    left: 0;
+    top: 0;
+  }
+}
+
+@media (min-width: 768px) and (max-width:991px){
+  .building-info .building-details .specifications {
+   width: 500px;
+   right: 20px;
+  }
+}
+
+.building-info .building-details .specifications span.specifications-name {
+  font-family: "Lato";
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 40px;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  color: rgba(6, 11, 14, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+@media (max-width: 767px) {
+  .building-info .building-details .specifications span.specifications-name {
+    font-size: 16px;
+    line-height: 40px;
+  }
+}
+
+.building-info .building-details .specifications span.specifications-val {
+  font-family: "Lato";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 32px;
+  letter-spacing: 1px;
+  text-transform: lowercase;
+  color: rgba(6, 11, 14, 1);
+}
+
+.building-info .building-details .specifications div {
+  padding: 20px;
+  display: flex;
+  gap: 500px;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+}
+
+@media (max-width: 767px) {
+  .building-info .building-details .specifications div {
+    gap: 0;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width:991px){
+  .building-info .building-details .specifications div {
+    gap: 0;
+    justify-content: space-between;
+    align-items: center;
+}
+}
+
+.building-info .building-details .specifications div:not(:last-child)::after {
+  /* border-bottom: 1px solid rgba(177, 179, 180, 1); */
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(177, 179, 180, 1);
+  bottom: -10px;
+  left: 0;
 }
