--- a/src/style/Error.css
+++ b/src/style/Error.css
@@ -16,6 +16,12 @@
   -webkit-text-fill-color: transparent;
 }
 
+@media (max-width:767px) {
+    .error h1 {
+        font-size: 120px;
+    }
+}
+
 .error p:nth-of-type(1){
     font-family: 'Cinzel';
     font-weight: 700;
