--- a/src/style/Slider.css
+++ b/src/style/Slider.css
@@ -86,7 +86,7 @@
   gap: 24px;
   position: absolute;
   right: 0;
-  top: 50%;
+  top:calc( 50% + 40px);
   transform: translate(-50%, -50%);
   z-index: 20;
 }
