--- a/src/style/Slider.css
+++ b/src/style/Slider.css
@@ -13,7 +13,7 @@
 }
 
 .parent .slider-wrapper {
-  width: 100%;
+  width: 100%;;
 }
 
 .slider-wrapper .card-img {
@@ -67,8 +67,8 @@
 @media (min-width: 992px) and (max-width: 1380px) {
   .slider-wrapper .card-img .slide_txt {
     line-height: 100px;
-    font-size: 80px;
-    top: 70px;
+    font-size: 50px;
+    top: 50px;
     left: 50px;
   }
 }
@@ -105,10 +105,10 @@
 @media (min-width: 992px) and (max-width: 1380px) {
   .parent .pagination {
   /* background-color: rgb(227, 21, 241); */
-  height: 550px;
+  height: 400px;
   width: 160px;
   right: 80px;
-  top:18%;
+  top:10%;
   transform: translate(0, 0);
 }
 }
@@ -202,15 +202,29 @@
 }
 
 @media (min-width: 992px) and (max-width: 1380px) {
+
   .parent .pagination span.active .slide-info {
-    gap: 8px;
-    height: 400px;
+    /* background-color: aquamarine; */
+    gap:0;
+    height: 150px;
     width: 580px;
-    top:-40px;
+    top:15px;
     margin: 0;
   }
    .parent .pagination span .slide-info::before {
-    height: 45%;
+    height: 80%;
+  }
+
+  
+  .parent .pagination span .slide-info h1 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  .parent .pagination span .slide-info p {
+    font-size: 20px;
+    line-height: 30px;
+
   }
 }
 
@@ -242,8 +256,9 @@
 
 @media (min-width: 992px) and (max-width: 1380px) {
   .parent .pagination span {
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
+    background-color: black;
   }
 }
 
@@ -284,8 +299,9 @@
 
 @media (min-width: 992px) and (max-width: 1380px) {
   .parent .circle .circles {
-    width: 250px;
-    height: 250px;
+    width: 120px;
+    height: 120px;
+    /* background-color: beige; */
   }
 }
 
@@ -361,6 +377,28 @@
   }
 }
 
+@media (min-width: 992px) and (max-width: 1380px){
+   .parent span.active .circle .circles:nth-of-type(1) {
+    transform: translateX(20px);
+  }
+
+  .parent span.active .circle .circles:nth-of-type(2) {
+    transform: translateX(-20px);
+  }
+
+  .parent span.active .circle .circles:nth-of-type(3) {
+    transform: translateY(-20px);
+  }
+
+  .parent span.active .circle .circles:nth-of-type(4) {
+    transform: translateY(20px);
+  }
+
+  .parent span.active .circle .circles:nth-of-type(5) {
+    transform: translate(0);
+  }
+}
+
 
 .parent .pagination span img {
   width: 160px;
@@ -372,6 +410,14 @@
   .parent .pagination span img {
     width: 48px;
     height: 48px;
+  }
+}
+
+
+@media (min-width: 992px) and (max-width: 1380px){
+   .parent .pagination span img {
+    width: 100px;
+    height: 100px;
   }
 }
 
@@ -403,8 +449,8 @@
 
 @media (min-width: 992px) and (max-width: 1380px){
   .parent .pagination span.active img {
-  width: 190px;
-  height: 190px;
+  width: 120px;
+  height: 120px;
 }
 }
 
@@ -455,6 +501,32 @@
   }
   50% {
      width: 100px;
+  }
+
+  100% {
+    left: -150px;
+    width: 0;
+  }
+}
+}
+
+@media (min-width: 992px) and (max-width: 1380px){
+  .parent .pagination span.active .animated_line {
+  width: 50px;
+  left: -100px;
+}
+
+@keyframes line_smooth {
+  0% {
+    width: 50px;
+    left: 0;
+    /* left: -200px; */
+  }
+  50% {
+     width: 150px;
+  }
+   75% {
+     width: 200px;
   }
 
   100% {
