--- a/src/style/Blog.css
+++ b/src/style/Blog.css
@@ -20,11 +20,12 @@
   .Blog .latest-news-btns {
     width:100%;
     /* background-color: rgb(12, 85, 189); */
-    padding: 20px 0;
+    padding:20px 80px;
     display: flex;
     justify-content: space-between;
     position: absolute;
     top: 50%;
+    transform: translate(0,calc(50% - 15px));
     /* left:75px; */
     z-index: 30;
   }
