--- a/src/style/Directors.css
+++ b/src/style/Directors.css
@@ -7,6 +7,7 @@
     margin: 50px 0;
   }
 }
+
 .directors .dir-title {
   width: 100%;
   max-width: 700px;
@@ -36,7 +37,7 @@
   }
 }
 
-@media (min-width:768px) and (max-width:1380px){
+@media (min-width:768px) and (max-width:991px){
   .directors .dir-cards {
     flex-wrap: wrap;
   }
@@ -70,10 +71,13 @@
   justify-content: center;
   align-items: center;
   gap: 16px;
+  border-radius: 10px;
 }
-
-@media (max-width: 767px) {
-
+@media (min-width:768px) and (max-width:1380px){
+  .directors .dir-cards .dir-card {
+width:250px;
+  height: 650px;
+}
 }
 
 .directors .dir-cards img {
@@ -81,6 +85,13 @@
   width: 100%;
   height: 512px;
   filter: grayscale(100%);
+  border-radius: 10px 10px 0 0;
+}
+@media (min-width:768px) and (max-width:1380px){
+  .directors .dir-cards img {
+  height: 300px;
+/* width: 280px; */
+}
 }
 .directors .dir-cards .dir-card .director-info {
   display: flex;
@@ -116,4 +127,30 @@
   text-transform: capitalize;
   height: 256px;
   width: 304px;
+}
+
+@media (min-width:768px) and (max-width:1380px){
+
+.directors .dir-cards .dir-card .director-info h4 {
+  font-size: 16px;
+  line-height: 20px;
+padding-left: 5px;
+
+}
+
+.directors .dir-cards .dir-card .director-info h5 {
+  font-size: 16px;
+  line-height: 20px;
+padding-left: 5px;
+
+
+}
+
+.directors .dir-cards .dir-card p {
+  font-size: 14px;
+  line-height: 25px;
+width: 100%;
+padding-left: 5px;
+}
+
 }
